タイトルの微修正

--- a/md/diary/2021-05-02-015000.md
+++ b/md/diary/2021-05-02-015000.md
@@ -1,4 +1,4 @@
-# のーたいとる
+# のーたいとる（2021-05-03版）
 最近生きることについて考えることが多くて、そもそも私は生きたくて生きているんだか、生きているから仕方がなくやりたいな～って思ったことをやってるんだかよくわからない。
 
 この話をすると多分反出生主義的な方向に進むと思うので深入りはしないとしても、少なくとも生きたいな～って望んで生まれようとした記憶はないので、なんか生まれちゃったとして話を進めていく。
