タイトル微修正（いつも忘れる）

--- a/md/diary/2021-05-11-025200.md
+++ b/md/diary/2021-05-11-025200.md
@@ -1,4 +1,4 @@
-# のーたいとる
+# のーたいとる（2021-05-11版）
 あさ～なわけないだろ3時になるんだぞ。書きたいことがあったので書く。細かい経緯とかは [twilogの2021-05-11あたり](https://twilog.org/Marco_utau/date-210511) を見てください。
 
 小中学生の頃は一応野球をやっていたこともあって運動はしていたし、多分今も運動自体が嫌いなわけじゃなくて、むしろどっちかというと好きな方だと思う。
