--- a/md/primagi/thoughts/ep005.md
+++ b/md/primagi/thoughts/ep005.md
@@ -34,3 +34,17 @@
 しかしこのキャラ、ほんとにずっと続くのかな。まあ掘り下げたとしてもこの根底は変わらず、キャラのコンセプトを紐解くほうが尖った良さを失わずに済みそうかもな～と思いつつの感想ではある。
 
 1/8虹ノ咲さんって言われてて草
+
+N回目
+
+暁のグリーンティーってアサヒのパロなのかな
+
+カメラマンさんイカれててほんと面白いし、みるきの裏が面白すぎるし、みゃむのダラダラな雰囲気大好きだし、ちむむの謎ポジション超面白い
+
+人の悪意……なのか、言葉の本質を理解することが苦手な気がするけど意図した設定なんだろうか
+
+「同じ地域で競うことになる」を小選挙区とか言わないで
+
+フェスティボー（正式名称）
+
+EDの「🐄🐄🐄」「🛀🛀🛀」がめちゃくちゃ面白くて好き
