誤字の修正とか若干手入れとか

--- a/md/advent-calendar/2021/2021-12-02-000000.md
+++ b/md/advent-calendar/2021/2021-12-02-000000.md
@@ -49,12 +49,12 @@ S&Bさんの[治安のペペロンチーノ](https://www.sbfoods.co.jp/products/
 これまではセブンとかのレンチン惣菜とか、冷凍食品の唐揚げとかをうまく使ってました。
 最近はそれに加えて、[nosh](https://nosh.jp/)さんのプレートを食べたりします。こっちはスーパーの食品より味が薄めだったり、少しとはいえ副菜が複数入っているのでちょうどよくてGood。
 あとは事前調味済みのパックとか買ってきて焼いたり炒めたりだけ、みたいなものも金土日あたりはたまに使ったり、それにレタス半玉買ってきて添えて食べたりとか、割と色々パターン試して解を探してたりします。
-野菜はめんどくさがりなのと使い切れないリスクの高さもあって。袋サラダで摂取することが大半。食べても上に書いたみたいなレタス半玉バリバリ食べるみたいなイカれキッチンになっちゃうんですよね……。
+野菜はめんどくさがりなのと使い切れないリスクの高さもあって、袋サラダで摂取することが大半。食べても上に書いたみたいなレタス半玉バリバリ食べるみたいなイカれキッチンになっちゃうんですよね……。
 未だに美味しいお肉の焼き方がわからず試行錯誤してますが、まあそんな感じでおかずを錬成しています。
 
-他で言うと、サクッと朝済ませるのにコーヒーとカロリーメイトとか、吉野家とかスシローのテイクアウトとか、ピザとかマックのデリバリーとか、外出ついでにトリキとかはなまるうどんとか、食産業（特にガチガチのビジネスしているところ）に支えられている側面がかなりあったりする。
+他で言うと、サクッと朝済ませるのにコーヒーとカロリーメイトとか、夜ご飯に吉野家とかスシローのテイクアウトとかピザとかマックのデリバリーとか、外出ついでにトリキとかはなまるうどんとか、食産業（特にガチガチのビジネスしているところ）に支えられている側面がかなりあったりする。
 
-そうそう、休日にたまーにやるのはカップラーメン + 塩おにぎり(食べる直前にのりを巻くやつ)で、このおにぎりが天才過ぎてやはり米が最強なんですよね……。
+そうそう、休日にたまーにやるのはカップラーメン + 塩おにぎり(食べる直前にのりを巻くやつ)で、このおにぎりが天才過ぎてやはり米と海苔は最強なんですよね……。
 何度か外食でマジでクソうまい米を食べてビビったことがあるんだけど、あれは米と炊き方とすべてを突き詰めないと無理なのかなあと家で米を炊いてよく思ったりする。ほんとにうまい米はやべえんだ……。
 
 便利っていうところでいうと、冷凍うどんとか冷凍たこ焼き、冷凍マック、冷凍肉まんあたりがめちゃくちゃいいです。あと冷凍ほうれん草（ほうれん草が好きなので）
