--- a/md/advent-calendar/2022/2022-12-18-000000.md
+++ b/md/advent-calendar/2022/2022-12-18-000000.md
@@ -1,19 +1,23 @@
 # Marco3jp Advent Calendar day18 Twitter
 
-私は2012/12/18にアカウントを作ったらしいです。
+私は2012/12/18にアカウントを作ったらしい。
 日付までは覚えていないけれど、たしかにアカウントを作ったその日のことは覚えていて、冬のある日のこと、よるご飯も食べ終わって寝る前の時間帯、多分22時くらいにAndroidウォークマンでTwitterアプリ入れてアカウントを作った。
 『〜なう』ってやつが2010年に流行語だったらしくて、なんかそれが頭にあったと思うんですよ。
 それまで私は身内のチャットくらいでしか発信することはなくて、初めて真のインターネットに飛び出した出来事でもあった。
 特に年齢隠しているわけでもないので詳しく書くと、このとき自分は中学生で生きている世界はすごく狭かったんだけど、アカウントを作ってウォークマンを枕元に置いて、世界が広がるんだろうなって期待の気持ちがすごくあったことを今でも覚えている。
 最初は公式クライアントを使っていてあんまり使ってなかったけど、Cerisierを使い始めてから結構よくツイッターするようになったはず。
 
-んでまあ10年経っての気持ち。
-多分アカウントを作ったときに思っていたキラキラした世界の景色とは違っていて、たしかに世界は広がったけど世界が広いからといってそれが『近所の町並み』みたいな感じになってしまうと別に広いからといって特別ではないな〜と感じる。
+んで10年経っての気持ち。
+多分アカウントを作ったときに思っていたキラキラした世界の景色とは違っていて、たしかに世界は広がったけど世界が広くてもそれが『近所の町並み』みたいな感じになることもあるんですよ。 
+就職や一人暮らしを始めるときの東京都心への気持ちも、結局は単なる土地でしかなくて、渦巻くものの大きさはあれど何度か行けば『いつもの景色』になるようなものかな〜って。
+もちろん世界が広がればそれまでの世界でできなかったことだってできるようになるので、世界を広げるのは別にゴールじゃなくて、その広がった世界で何するの？ってところが大事だな〜と思ったりもします。
 （それはそうと、この世界が広がる体験ってクリッカーゲームとかソシャゲとかでうまく取り入れられていると思っていて、世界が広がることを報酬だと思いこんでしまうみたいなところあるんすよね）
 
-とは言っても、多分物理的な世界だけで生きていたら出会わなかった人たちがたくさんTLにはいるわけで、そもそも『近所の町並み』を手に入れることができたというのは悪くないものかなと思っていたりします。
+とは言っても、多分物理的な世界だけで生きていたら出会わなかった人たちがたくさんTLにはいるわけで、そもそも『近所の町並み』を手に入れたというのは悪くないものかなと思っていたりします。
 TLの動きというのは世界のどこかで今日も生きている人間の存在であって、都市の輝きにも似ていて結構好きなんですよね。始発の時間帯は全くツイート流れてこないし。
 まだ喋ったことない人たちがたくさんいるとは思うんだけど、インターネットでも、現実でも、どこかで喋ったりすれ違ったり、なんか起きたら面白いよね、くらいな感じです。
 
 なんか酔っ払いすぎてあんまりよくわからない文章書いてるし納得できてないけど下書きくらいな気持ちで読んでください。
 とりあえず伝えたいのは、ツイッターはじめてもう10年になるんだぞってことと、10年前の俺に、気軽に始めたTwitterにのめり込んで10年後もやってるし10万ツイート超えるからな、と言いたいってことです。
+
+追記：18日にちょっとだけ修正入れました（コミットしたのは21日ですが……）
