ライブに行きたいってやつを書き忘れたので追記

--- a/app/src/content/articles/advent-calendar/2023/2023-12-06-000000.md
+++ b/app/src/content/articles/advent-calendar/2023/2023-12-06-000000.md
@@ -16,6 +16,10 @@
   - 漫画、小説、ビジネス書？、技術書？とかかなあ
   - これまで後者をろくに読んでこなかったので手を出したほうが良いんだろうと思う
   - でもなんか随分疲れているところはあるので、仕事とか将来のために頑張るぞ～なんてやめたほうがよさそうで、なのでまあ読みたいなと思った本を読みたいときに読むぞ、で良いんだと思います
+- 音楽ライブに行きたい
+  - 『ライブイベント』的なやつじゃなくてライブに行きたい
+  - UNISON SQUARE GARDEN、Perfume、サカナクション、山下達郎さん、星野源さんなどが筆頭
+  - 声優だと東山奈央さんが生バンドだったはずなので行ってみたい、内田真礼さんのライブがどういう形式かわからないけど気になる
 - 思考したい（一部カウンセリングを考えてるのもあるけど）
   - 『極度のめんどくさがり』という思考とどう付き合って生きていくか
     - 私は私を捨てられないんじゃ～～～
