見出しをちょっと修正

--- a/app/src/content/articles/advent-calendar/2024/2024-12-01-000000.md
+++ b/app/src/content/articles/advent-calendar/2024/2024-12-01-000000.md
@@ -5,14 +5,14 @@
 
 ## 例年との違い
 
-### 内容
+### 内容の面
 
 特定の曲やアニメ、イベント、ただ味わうだけじゃなくてしゃぶり尽くすのもやりたくない？というのをテーマにしています
 たくさんのものを摂取しているけど、それらは体を通って流れてしまう感覚があって、ちゃんと脳に入れたいって意図があってのテーマです
 過去にも何度かやっているけど、解釈があっているとか間違っているとか、未知がどこにあるかわからない不安とかから感想を絞り出すジリジリとした体験には意味があると思うんすよね
 まあやってもやらなくてもただのオタクであってそれで何者かになれるわけじゃないんだけど、コンテンツの楽しみ方に手札ができるし、惰性で見るじゃない見方を得られるのは死ぬまで価値があるはず
 
-### 下準備
+### 準備の面
 
 あと、例年一年まとめ記事系を書くことも多々あったんですが、これ集計したりが地味に大変で困ったななんて思っておりました
 そこでもういっそ一年間通じて都度まとめていけばよいのでは？？？と思って、今年の頭からいくつかのトピックをまとめていました
