リンク切れを起こしていた箇所があったので修正

--- a/app/src/content/articles/advent-calendar/2023/2023-12-04-000000.md
+++ b/app/src/content/articles/advent-calendar/2023/2023-12-04-000000.md
@@ -1409,7 +1409,7 @@ cushionNoHref: "https://kids.yahoo.co.jp/"
 [このソースコード](https://gist.github.com/Marco3jp/89f4f62bc1d239d47d6abf7c6b1faae3)を使って今年購入したやつをとりあえずリストアップしたものを活かしたやつです。
 まあこの記事を書くために書いたコードなのでそれはそうなんですけど。
 しかし時刻が軒並み深夜なの私の生活周期って感じがして恥ずかしくておもろいですわね。
-[今年買った商業単行本に関してはこのScrapbox記事に記載している](https://scrapbox.io/marco3jp/%E6%88%90%E4%BA%BA%E5%90%91%E3%81%91%E3%82%B3%E3%83%9F%E3%83%83%E3%82%AF%2F2023)ので参考までに。
+[今年買った商業単行本に関してはこのScrapbox記事に記載している](https://scrapbox.io/forbidden-marco3jp/%E6%88%90%E4%BA%BA%E5%90%91%E3%81%91%E3%82%B3%E3%83%9F%E3%83%83%E3%82%AF%2F2023)ので参考までに。
 良かった作品については別で書きたい気持ちなのでよろしくね〜〜〜。
 
 ## ページ作るために書いたコード
