--- a/app/src/content/articles/advent-calendar/2024/2024-12-07-000000.md
+++ b/app/src/content/articles/advent-calendar/2024/2024-12-07-000000.md
@@ -43,7 +43,7 @@ JR中央本線の国分寺駅が最寄り駅となる『もがみ』が今年一
 料理としての側面はもちろんのこと、わざわざメニューにそれを置いてくれていることで1人への許容があるとわかるし、そのメニューと合うお酒などを楽しめばお店として最低ラインのクリアにはなるんだろうな、という安心感があった
 
 ### その他
-- 日本酒が色々あって楽しい。メニューの表記が産地、酒種（純米とか吟醸とか）で選びやすくて嬉しい
+- 日本酒が色々あって楽しい。メニューの表記が産地、酒種（純米とか吟醸とか）、酒米で選びやすくて嬉しい
 - ビールも美味しい。黒ラベルがおいてあるんだけど、泡の作りが本当に良くて注ぐのが上手い方がいると思う
   - プレモルと黒ラベルが日本のビールだと1, 2で好きなので選定も刺さって嬉しい
 - 飯も酒もうますぎるため集中してしまい、自然と大慌てで飲酒をしてしまう。気をつける必要がある
