微妙にニュアンスが気に入らなかったので修正

--- a/app/src/content/articles/advent-calendar/2024/2024-12-07-000000.md
+++ b/app/src/content/articles/advent-calendar/2024/2024-12-07-000000.md
@@ -2,7 +2,7 @@
 
 ## まえおき
 今年どれくらい新規開拓したかわからないけど、ざっくり調べた感じだと少なくとも20軒くらいは初めて行くお店に行ってたらしい
-まあそのうち半分以上がグループの飲み会とか飲み目的で、グルメ的なところを重視したお店は多くなかったみたいなんだけど、めちゃくちゃいいお店があったので書くよ
+まあそのうち半分くらいはグループの飲み会とか飲み目的で、グルメ的なところを重視したお店は多くなかったみたいなんだけど、めちゃくちゃいいお店があったので書くよ
 料理と酒の両面を持って満足することが多いのと、魚・鶏肉・日本酒が特に好きで、ビールや芋焼酎も結構好きな人なので参考までに
 （それはそうと、この文章は1/2に書いているので実は去年の話なんですよね）
 
